tests/bad/12_bad_var_def_type_23.ris
void main():
    let string a = 42;
    return;