tests/bad/12_bad_var_def_type_23.err
Type error in line 2, column 16:
in definition of string a:
wrong type of expression: 42
